Fixing report overflow issues for 3dmodels

--- a/arches_3d/arches_3d/media/css/report.css
+++ b/arches_3d/arches_3d/media/css/report.css
@@ -5,6 +5,7 @@
 .report-render-area {
     height: 685px;
     width: 100%;
+	overflow: hidden;
 }
 
 .fullscreen-button {
